// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert with error variant matches snapshot 1`] = `
<div
  className="gp-12px pg-12px-16px fwp-nowrap ais-flex-start brs-8px bwh-1px bsee-solid bcrr-var--color-red-200 bcr-var--color-red-50 bsw-0-1px-2px-rgba239-68-68-0p05 tn-background-color-0p2s-ease-border-color-0p2s-ease-box-shadow-0p2s-ease dy-flex fdn-row"
  ref={[Function]}
  role="alert"
>
  <div
    className="asf-flex-start mtp-2px"
    ref={[Function]}
  >
    <div
      className="wh-20px ht-20px wht-20 cr-var--color-red-500 dy-flex ais-center jct-center tm-rotate0deg"
      ref={[Function]}
    />
  </div>
  <div
    className="gp-4px dy-flex fdn-column"
    ref={[Function]}
  >
    <span
      className="fsee-normal tdn-none fse-14px fwt-600 lht-20px cr-var--color-red-700"
      ref={[Function]}
      style={{}}
    >
      Error
    </span>
    <span
      className="fsee-normal tdn-none fse-12px fwt-400 lht-16px cr-var--color-red-700"
      ref={[Function]}
      style={{}}
    >
      This is an error
    </span>
  </div>
</div>
`;

exports[`Alert with info variant matches snapshot 1`] = `
<div
  className="gp-12px pg-12px-16px fwp-nowrap ais-flex-start brs-8px bwh-1px bsee-solid bcrr-var--color-blue-200 bcr-var--color-blue-50 bsw-0-1px-2px-rgba59-130-246-0p05 tn-background-color-0p2s-ease-border-color-0p2s-ease-box-shadow-0p2s-ease dy-flex fdn-row"
  ref={[Function]}
  role="status"
>
  <div
    className="asf-flex-start mtp-2px"
    ref={[Function]}
  >
    <div
      className="wh-20px ht-20px wht-20 cr-var--color-blue-500 dy-flex ais-center jct-center tm-rotate0deg"
      ref={[Function]}
    />
  </div>
  <div
    className="gp-4px dy-flex fdn-column"
    ref={[Function]}
  >
    <span
      className="fsee-normal tdn-none fse-14px fwt-600 lht-20px cr-var--color-blue-700"
      ref={[Function]}
      style={{}}
    >
      Info
    </span>
    <span
      className="fsee-normal tdn-none fse-12px fwt-400 lht-16px cr-var--color-blue-700"
      ref={[Function]}
      style={{}}
    >
      This is info
    </span>
  </div>
</div>
`;

exports[`Alert with success variant matches snapshot 1`] = `
<div
  className="gp-12px pg-12px-16px fwp-nowrap ais-flex-start brs-8px bwh-1px bsee-solid bcrr-var--color-green-200 bcr-var--color-green-50 bsw-0-1px-2px-rgba34-197-94-0p05 tn-background-color-0p2s-ease-border-color-0p2s-ease-box-shadow-0p2s-ease dy-flex fdn-row"
  ref={[Function]}
  role="status"
>
  <div
    className="asf-flex-start mtp-2px"
    ref={[Function]}
  >
    <div
      className="wh-20px ht-20px wht-20 cr-var--color-green-500 dy-flex ais-center jct-center tm-rotate0deg"
      ref={[Function]}
    />
  </div>
  <div
    className="gp-4px dy-flex fdn-column"
    ref={[Function]}
  >
    <span
      className="fsee-normal tdn-none fse-14px fwt-600 lht-20px cr-var--color-green-700"
      ref={[Function]}
      style={{}}
    >
      Success
    </span>
    <span
      className="fsee-normal tdn-none fse-12px fwt-400 lht-16px cr-var--color-green-700"
      ref={[Function]}
      style={{}}
    >
      This is success
    </span>
  </div>
</div>
`;

exports[`Alert with warning variant matches snapshot 1`] = `
<div
  className="gp-12px pg-12px-16px fwp-nowrap ais-flex-start brs-8px bwh-1px bsee-solid bcrr-var--color-orange-200 bcr-var--color-orange-50 bsw-0-1px-2px-rgba249-115-22-0p05 tn-background-color-0p2s-ease-border-color-0p2s-ease-box-shadow-0p2s-ease dy-flex fdn-row"
  ref={[Function]}
  role="alert"
>
  <div
    className="asf-flex-start mtp-2px"
    ref={[Function]}
  >
    <div
      className="wh-20px ht-20px wht-20 cr-var--color-orange-500 dy-flex ais-center jct-center tm-rotate0deg"
      ref={[Function]}
    />
  </div>
  <div
    className="gp-4px dy-flex fdn-column"
    ref={[Function]}
  >
    <span
      className="fsee-normal tdn-none fse-14px fwt-600 lht-20px cr-var--color-orange-700"
      ref={[Function]}
      style={{}}
    >
      Warning
    </span>
    <span
      className="fsee-normal tdn-none fse-12px fwt-400 lht-16px cr-var--color-orange-700"
      ref={[Function]}
      style={{}}
    >
      This is a warning
    </span>
  </div>
</div>
`;
